--- a/ftpserver/pom.xml
+++ b/ftpserver/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.eftp</groupId>
     <artifactId>ftpserver</artifactId>
-    <version>0.0.1</version>
+    <version>0.0.2-SNAPSHOT</version>
     <packaging>war</packaging>
     <dependencies>
         <dependency>
