--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.eftp</groupId>
     <artifactId>e2ftp</artifactId>
-    <version>0.0.1</version>
+    <version>0.0.2-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>e2ftp</name>
     <modules>
@@ -23,6 +23,6 @@
         <connection>scm:git:git@github.com:AdamBien/e2ftp.git</connection>
         <url>scm:git:git@github.com:AdamBien/e2ftp.git</url>
         <developerConnection>scm:git:git@github.com:AdamBien/e2ftp.git</developerConnection>
-      <tag>e2ftp-0.0.1</tag>
+      <tag>HEAD</tag>
   </scm>         
 </project>
