--- a/ftpservice/pom.xml
+++ b/ftpservice/pom.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0"?>
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>org.eftp</groupId>
+        <artifactId>e2ftp</artifactId>
+        <version>0.0.2-SNAPSHOT</version>
+    </parent>
     <groupId>org.eftp</groupId>
-    <artifactId>e2ftp</artifactId>
+    <artifactId>ftpservice</artifactId>
     <version>0.0.2-SNAPSHOT</version>
-  </parent>
-  <groupId>org.eftp</groupId>
-  <artifactId>ftpservice</artifactId>
-  <version>0.0.2-SNAPSHOT</version>
     <build>
         <plugins>
             <plugin>
@@ -47,9 +47,15 @@
             <artifactId>slf4j-jdk14</artifactId>
             <version>1.7.5</version>
             <scope>compile</scope>
-        </dependency>        
-  </dependencies>
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>  
+        </dependency>
+        <dependency>
+            <groupId>org.eftp</groupId>
+            <artifactId>ftpserverapi</artifactId>
+            <version>0.0.2-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 </project>
