--- a/ftpservice/pom.xml
+++ b/ftpservice/pom.xml
@@ -50,7 +50,7 @@
         </dependency>
         <dependency>
             <groupId>org.eftp</groupId>
-            <artifactId>ftpserverapi</artifactId>
+            <artifactId>ftpservice-api</artifactId>
             <version>0.0.2-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
