--- a/ftpservice/pom.xml
+++ b/ftpservice/pom.xml
@@ -12,6 +12,12 @@
     <version>0.0.2-SNAPSHOT</version>
     <dependencies>
         <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.10</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
             <version>7.0</version>
