--- a/ftpserver/pom.xml
+++ b/ftpserver/pom.xml
@@ -31,6 +31,7 @@
                 </configuration>
             </plugin>
         </plugins>
+        <finalName>ftpserver</finalName>
     </build>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
