--- a/hook-test-client/pom.xml
+++ b/hook-test-client/pom.xml
@@ -4,12 +4,12 @@
     <parent>
         <artifactId>e2ftp</artifactId>
         <groupId>org.eftp</groupId>
-        <version>0.0.2-SNAPSHOT</version>
+        <version>0.0.2</version>
     </parent>
 
     <groupId>org.e2ftp</groupId>
     <artifactId>hook-test-client</artifactId>
-    <version>0.2-SNAPSHOT</version>
+    <version>0.2</version>
     <packaging>war</packaging>
 
     <name>hook-test-client</name>
