[maven-release-plugin] prepare for next development iteration

--- a/ftpservice-api/pom.xml
+++ b/ftpservice-api/pom.xml
@@ -4,11 +4,11 @@
     <parent>
         <groupId>org.eftp</groupId>
         <artifactId>e2ftp</artifactId>
-        <version>0.0.2</version>
+        <version>0.0.3-SNAPSHOT</version>
     </parent>
     <groupId>org.eftp</groupId>
     <artifactId>ftpservice-api</artifactId>
-    <version>0.0.2</version>
+    <version>0.0.3-SNAPSHOT</version>
     <dependencies>
         <dependency>
             <groupId>org.apache.ftpserver</groupId>
