--- a/ftpserver-st/pom.xml
+++ b/ftpserver-st/pom.xml
@@ -4,11 +4,11 @@
     <parent>
         <groupId>org.eftp</groupId>
         <artifactId>e2ftp</artifactId>
-        <version>0.0.2</version>
+        <version>0.0.3-SNAPSHOT</version>
     </parent>
     <groupId>org.eftp</groupId>
     <artifactId>ftpserver-st</artifactId>
-    <version>0.0.2</version>
+    <version>0.0.3-SNAPSHOT</version>
     <name>ftpserver-st</name>
     <dependencies>
         <dependency>
