--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,18 @@
     <version>0.0.3-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>e2ftp</name>
+    <organization>
+        <name>e2ftp</name>
+        <url>http://e2ftp.adam-bien.com</url>
+    </organization>
+    <inceptionYear>2013</inceptionYear>
+    <licenses>
+        <license>
+            <name>The Apache Software License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
     <modules>
         <module>ftpservice-api</module>
         <module>ftpservice</module>
@@ -15,6 +27,26 @@
     </modules>
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>license-maven-plugin</artifactId>
+                <version>1.4</version>
+                <configuration>
+                    <verbose>true</verbose>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>add-apache-headers</id>
+                        <goals>
+                            <goal>update-file-header</goal>
+                        </goals>
+                        <phase>process-sources</phase>
+                        <configuration>
+                            <licenseName>apache_v2</licenseName>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
