Introduced management resource to start, stop and restart the FTP-Server. FTP-Server state can be queried, too.

--- a/ftpserver/src/main/webapp/WEB-INF/web.xml
+++ b/ftpserver/src/main/webapp/WEB-INF/web.xml
@@ -11,6 +11,7 @@
             <web-resource-name>Configuration</web-resource-name>
             <description/>
             <url-pattern>/api/configuration/*</url-pattern>
+            <url-pattern>/api/management/*</url-pattern>
         </web-resource-collection>
         <web-resource-collection>
             <web-resource-name>Statistics</web-resource-name>
